--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular-tag-cloud": "^0.3.3",
+    "angular-tag-cloud-module": "^1.4.0",
     "core-js": "^2.4.1",
     "express": "^4.15.3",
     "rxjs": "^5.1.0",
