--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.0.0",
     "angular-tag-cloud": "^0.3.3",
     "angular-tag-cloud-module": "^1.4.0",
+    "angular-in-memory-web-api": "~0.1.1",
     "core-js": "^2.4.1",
     "express": "^4.15.3",
     "rxjs": "^5.1.0",
